error1.txt
test/python-tests/basic_arithmetic.cpp:19:28: error: no matching function for call to 'to_string'
   19 |     std::cout << "Sum: " + std::to_string(std::to_string(sum_result)) << std::endl;
      |                            ^~~~~~~~~~~~~~
/usr/bin/../lib64/gcc/x86_64-pc-linux-gnu/15.2.1/../../../../include/c++/15.2.1/bits/basic_string.h:4530:3: note: candidate function not viable: no known conversion from 'string' (aka 'basic_string<char>') to 'int' for 1st argument
 4530 |   to_string(int __val)
      |   ^         ~~~~~~~~~